--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "version": "0.0.1",
   "engines": {
-    "vscode": "^1.96.0"
+    "vscode": "^1.85.0"
   },
   "categories": [
     "Other"
@@ -13,11 +13,25 @@
   "main": "./extension.js",
   "contributes": {
     "commands": [
+      {
+        "command": "extension.downloadNetworkTables",
+        "title": "Download networktables.json from roboRIO"
+      }
+    ],
+    "menus": {
+      "editor/context": [
         {
-            "command": "extension.downloadNetworkTables",
-            "title": "Download networktables.json from roboRIO"
+          "command": "extension.downloadNetworkTables",
+          "group": "navigation"
         }
-    ]
+      ],
+      "explorer/context": [
+        {
+          "command": "extension.downloadNetworkTables",
+          "group": "navigation"
+        }
+      ]
+    }
   },
   "scripts": {
     "lint": "eslint .",
@@ -27,7 +41,7 @@
   "devDependencies": {
     "@types/mocha": "^10.0.9",
     "@types/node": "20.x",
-    "@types/vscode": "^1.96.0",
+    "@types/vscode": "^1.85.0",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1",
     "eslint": "^9.13.0"
