--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "get-preferences",
   "displayName": "Get Preferences",
   "description": "",
-  "version": "0.0.5",
-  "icon": "CISLogo.png",  
+  "version": "0.1.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/FRC4607/VSCode_Extension"
+  },
+  "icon": "CISlogo.png",  
   "engines": {
     "vscode": "^1.85.0"
   },
@@ -49,5 +53,6 @@
   },
   "dependencies": {
     "ssh2-sftp-client": "^11.0.0"
-  }
+  },
+  "license": "MIT"  
 }
